# styrofoam

./: .gitmodules  Cargo.toml
res/shaders/: texture.slang  triangle.slang  triangle2.slang
res/shaders/2d/: egui.slang
src/: main.rs
src/renderer/: commands.rs  debug.rs  mod.rs  vkhandles.rs
src/renderer/shader/: mod.rs  reflect.rs
src/renderer/vulkan/: command.rs  debug.rs  device.rs  instance.rs  memory.rs  mod.rs  swapchain.rs  sync.rs
styro-rhi/: Cargo.toml
styro-rhi/src/: command.rs  debug.rs  device.rs  instance.rs  lib.rs  swapchain.rs
styro-shader-rhi/: Cargo.toml
styro-shader-rhi/src/: lib.rs
styro-shader-tools/: Cargo.toml
styro-shader-tools/src/: main.rs  reflect.rs
styro-viewer/: Cargo.toml  main.rs
styro-viewer/src/: main.rs
styro-viewer/src/renderer/: mod.rs
styro-viewer/src/util/: str.rs
