[package]
name = "styro-rhi"
version = "0.2.0"
edition = "2024"

[dependencies]
# 2026-05-20, required for bindings to Vulkan 1.4 and VK_EXT_descriptor_heap
ash = { git = "https://github.com/ash-rs/ash.git", rev = "a9a1fb17e98a0cde146caada86200d809306200d" }
ash-window = { git = "https://github.com/ash-rs/ash.git", rev = "a9a1fb17e98a0cde146caada86200d809306200d" }
# We also need to modify vk-mem so it uses the latest ash
vk-mem = { path = "../vk-mem-rs" }
# bytemuck is too useful not to use
bytemuck = "1.25.0"
# ash-window does not re-export this, so we need it
raw-window-handle = "0.6.2"
